--- a/server/pom.xml
+++ b/server/pom.xml
@@ -10,6 +10,17 @@
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>server</artifactId>
-
+    <dependencies>
+        <dependency>
+            <groupId>hum</groupId>
+            <artifactId>foo</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
+        <dependency>
+            <groupId>hum</groupId>
+            <artifactId>lib</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
+    </dependencies>
 
 </project>
